--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<p>
-  home works!
 
-  <button (click)=logout()>Logout</button>
-</p>
+
+  <h1>This is home</h1>
+ <a routerLink="/products">Products</a>
