--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<mat-card >  
+    <div fxLayoutAlign="end stretch">
+         <button *ngIf ="authService.isAuthenticated" mat-button color="primary" (click)=logout()>Hi. Logout?</button>
+         <app-login *ngIf ="!authService.isAuthenticated"></app-login>
+    </div>
+  
+</mat-card>
+
 <router-outlet></router-outlet>
