--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<mat-card >  
-    <div fxLayoutAlign="end stretch">
-         <button *ngIf ="authService.isAuthenticated" mat-button color="primary" (click)=logout()>Hi. Logout?</button>
-         <app-login *ngIf ="!authService.isAuthenticated"></app-login>
-    </div>
-  
-</mat-card>
-
-<router-outlet></router-outlet>
+<div id="fullPage">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
