--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,1 +1,6 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+#fullPage{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
