--- a/src/app/auth/login.component.less
+++ b/src/app/auth/login.component.less
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+//@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+#log-in{
+  float: right;
+}
+#log-out{
+  float: right;
+}
