--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,6 +1,6 @@
 <!--<div fxLayoutAlign="end stretch">-->
-   <button id="log-in" *ngIf="!authService.isAuthenticated" mat-button color="primary" (click)="openDialog()" >Hi. Login</button>
-   <button id="log-out" *ngIf="authService.isAuthenticated"mat-button color="primary" (click)="logout()">Hi. Logout</button>
+   <button id="log-in"  mat-raised-button class="mat-primary" *ngIf="!authService.isAuthenticated" mat-button color="primary" (click)="openDialog()" >Hi. Login</button>
+   <button id="log-out"  mat-raised-button class="mat-warn" *ngIf="authService.isAuthenticated"mat-button color="primary" (click)="logout()">Hi. Logout</button>
 <!--</div>-->
 
     
