Add seacrh component to home

--- a/src/app/dialogs/login-dialog/login-dialog.component.html
+++ b/src/app/dialogs/login-dialog/login-dialog.component.html
@@ -22,6 +22,8 @@
                     </button>
                      <button type=button mat-raised-button class="mat-warn" (click)="onNoClick()">Close</button>
                 </span>
+
         </form>
+             <button type=button mat-raised-button class="mat-warn sign" (click)="openSignDialog()" fxFlexFill>Sign up</button>
 </div>
 
