Add info component

--- a/src/app/home/search/search.component.less
+++ b/src/app/home/search/search.component.less
@@ -21,7 +21,7 @@
  color:@color;
 }
 .search {
-    margin:21%;
+    margin:0 21%;
     width:58%;
     padding: 0 0 0 16px;
      @media  only screen  and (max-width: 959px){
